# SchoolManagementSystem

./: .gitattributes  Administrator.cpp  Administrator.h  Course.cpp  Course.h  Date.cpp  Date.h  Exam.cpp  Exam.h  Group.cpp  Group.h  Place.cpp  Place.h  Profile.cpp  Profile.h  README.md  SCourse.cpp  SCourse.h  Schedule.cpp  Schedule.h  School.h  School.tpp  SchoolManagementSystem.h  SchoolManagementSystem.tpp  Section.cpp  Section.h  Semestre.cpp  Semestre.h  Session.cpp  Session.h  Slide.cpp  Slide.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Time.cpp  Time.h  Year.cpp  Year.h  (+6 more)
tt/: Adminstrator.cpp  Adminstrator.h  CMakeLists.txt  Course.cpp  Course.h  Date.cpp  Date.h  Exam.cpp  Exam.h  Group.cpp  Group.h  Main.cpp  Place.cpp  Place.h  Profile.cpp  Profile.h  SCourse.cpp  SCourse.h  Schedule.cpp  Schedule.h  Section.cpp  Section.h  Semestre.cpp  Semestre.h  Session.cpp  Session.h  Slide.cpp  Slide.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Time.cpp  Time.h  Year.cpp  Year.h  funcs.cpp  funcs.h  images.qrc  main.cpp  (+4 more)
